--- a/_talks/2020-12-18-grss.md
+++ b/_talks/2020-12-18-grss.md
@@ -2,10 +2,10 @@
 title: "IEEE India Geoscience and Remote Sensing Young Researchers Conclave 2020"
 collection: talks
 type: "Talk"
-permalink: /talks/2020-12-18-grss-conclave
+permalink: /talks/2020-12-18-grss
 venue: "Indian Institute of Space Science and Technology, Trivandrum"
 date: 2012-03-01
 location: "Trivandrum, India"
 ---
 
-Slides: [Soil Moisture Retrieval using Sliced Regression Inversion Technique](/files/201218_grss_conclave_presentation.pdf)
+Slides: [Soil Moisture Retrieval using Sliced Regression Inversion Technique](/files/20201218_grss_presentation.pdf)
